--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,16 +60,6 @@ h4{
     color: #fff ;
 
 }
-@media (min-width: 1200px) {
-    #nav a {float: none;width: 100%;}}
-@media (min-width: 800px) {
-    #nav a {float: none;width: 100%;}}
-@media (min-width: 600px) {
-    #nav a {float: none;width: 100%;}}
-@media (min-width: 480px) {
-   #nav a {float: none;width: 100%;}}
-@media (min-width: 320px) {
-    #nav a {float: none;width: 100%;}}
 /* hero image */
 #hero-outer {
     height: 600px;
@@ -97,21 +87,7 @@ h4{
 from {transform: scale(1);}
 to
 {transform: scale(1.25);}}
-@media (min-width: 1200px) {
-    #hero {max-width: 100%; max-height: 100%;}
-}
-@media (min-width: 800px) {
-    #hero {max-width: 100%; max-height: 100%;}
-}
-@media (min-width: 600px) {
-    #hero {max-width: 100%; max-height: 100%;}
-}
-@media (min-width: 480px) {
-    #hero {max-width: 100%; max-height: 100%;}
-}
-@media (min-width: 320px) {
-    #hero {max-width: 100%; max-height: 100%;}
-}
+
 /*hero image for every page except landing page*/
 #hero-rest {
     height: 600px;
@@ -123,21 +99,6 @@ to
     align-items: center;
     /*keeps image the same size as the landing page*/
     transform: scale(1.25);
-}
-@media (min-width: 1200px) {
-    #hero-rest {max-width: 100%; max-height: 100%;}
-}
-@media (min-width: 800px) {
-    #hero-rest {max-width: 100%; max-height: 100%;}
-}
-@media (min-width: 600px) {
-    #hero-rest {max-width: 100%; max-height: 100%;}
-}
-@media (min-width: 480px) {
-    #hero-rest {max-width: 100%; max-height: 100%;}
-}
-@media (min-width: 320px) {
-    #hero-rest {max-width: 100%; max-height: 100%;}
 }
 /*text box within the hero image styled*/
 
@@ -154,21 +115,6 @@ to
     background-color: rgba(190, 144, 212,.7);
     bottom: 25px;
     position: absolute;
-}
-@media (min-width: 1200px) {
-    #cover-test {max-width: 100%; max-height: 100%;}
-}
-@media (min-width: 800px) {
-    #cover-test {max-width: 100%; max-height: 100%;}
-}
-@media (min-width: 600px) {
-    #cover-text {max-width: 100%; max-height: 100%;}
-}
-@media (min-width: 480px) {
-    #cover-test {max-width: 100%; max-height: 100%;}
-}
-@media (min-width: 320px) {
-    #cover-text {max-width: 100%; max-height: 100%;}
 }
 /*adds a margin botton to everything with this class name*/
 .margin{
@@ -191,73 +137,18 @@ hr {
     margin: 10px 0;
     font-size: 200%;
 }
-/*grid*/
-.grid-container
-{
-    display: grid;
-    grid-gap: 1rem; 
-    padding: 1rem;
-    max-width: 1200px;
-    margin: 0 auto;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-}
-@media (min-width: 1200px) {
-    .grid-container { grid-template-columns: repeat(2, 1fr); }
-}
-@media (min-width: 800px) {
-    .grid-container { grid-template-columns: repeat(2, 1fr); }
-}
-@media (min-width: 600px) {
-    .grid-container { grid-template-columns: repeat(2, 1fr); }
-}
-@media only screen and (min-width: 480px) {
-    .grid-container { grid-template-columns: repeat(2, 1fr); }
-}
-@media only screen and (min-width: 320px) {
-    .grid-container { grid-template-columns: repeat(2, 1fr); }
-}
 /* what is yoga */ 
-body .box-one {
+.box-one {
     line-height: 20px;
     text-align: right;
-    height: auto;
 }
-@media (min-width: 1200px) {
-    .grid-container { grid-template-columns: repeat(2, 1fr); }
-}
-@media (min-width: 800px) {
-    .grid-container { grid-template-columns: repeat(2, 1fr); }
-}
-@media (min-width: 600px) {
-    .grid-container { grid-template-columns: repeat(2, 1fr); }
-}
-@media only screen and (min-width: 480px) {    
-   body .box-one{height: auto; align-items: center;}
-}
-@media only screen and (min-width: 320px) {    
-    body .box-one{height: auto; align-items: center;}
- }
 /* why do yoga*/
-body .box-two{
-     
+.box-two{     
     line-height: 20px;
-    text-align: left;
-    height:auto;   
+    text-align: left;  
 }
-@media (min-width: 1200px) {
-    .box-two {max-width: 100%; max-height: 100%;align-items: center;}
-}
-@media (min-width: 800px) {
-    .box-two {max-width: 100%; max-height: 100%;align-items: center;}
-}
-@media (min-width: 600px) {
-    .box-two {max-width: 100%; max-height: 100%;align-items: center;}
-}
-@media only screen and (min-width: 480px) {
-    .box-two {max-width: 100%; max-height: 100%;align-items: center;} 
-}
-@media only screen and (min-width: 320px) {
-    .box-two {max-width: 100%; max-height: 100%;align-items: center;} 
+.pad{
+    margin-bottom: 30px;;
 }
 /*video text styled*/
 .video{
@@ -270,23 +161,8 @@ body .box-two{
     height: 100%;
     border-radius: 50%;
 }
-@media (min-width: 1200px) {
-    #circle-one {max-width: 100%; max-height: 100%;align-items: center;}
-}
-@media (min-width: 800px) {
-    #circle-one {max-width: 100%; max-height: 100%;align-items: center;}
-}
-@media (min-width: 600px) {
-    #circle-one {max-width: 100%; max-height: 100%;align-items: center;}
-}
-@media only screen and (min-width: 480px) {
-    #circle-one {max-width: 100%; max-height: 100%;align-items: center;} 
-}
-@media only screen and (min-width: 320px) {
-    #circle-one {max-width: 100%; max-height: 100%;align-items: center;} 
-}
-/*cirled picture*/
-.container{
+/*circled picture*/
+.pic-container{
     width: 300px;
     height: 300px;
     padding: 30px;
@@ -296,42 +172,12 @@ body .box-two{
     border-radius: 50%;
     margin: 0 auto;
 }
-@media (min-width: 1200px) {
-    .container {max-width: 100%; max-height: 100%;align-items: center;}
-}
-@media (min-width: 800px) {
-    .container {max-width: 100%; max-height: 100%;align-items: center;}
-}
-@media (min-width: 600px) {
-    .container {max-width: 100%; max-height: 100%;align-items: center;}
-}
-@media only screen and (min-width: 480px) {
-    .container {max-width: 100%; max-height: 100%;align-items: center;} 
-}
-@media only screen and (min-width: 320px) {
-    .container {max-width: 100%; max-height: 100%;align-items: center;} 
-}
 /*image within circle 1*/
 #circle-2{
     background: url('../images/yoga-3.png') no-repeat center center;
     height: 100%;
     border-radius: 50%;
     
-}
-@media (min-width: 1200px) {
-    #circle-2 {max-width: 100%; max-height: 100%;align-items: center;}
-}
-@media (min-width: 800px) {
-    #circle-2 {max-width: 100%; max-height: 100%;align-items: center;}
-}
-@media (min-width: 600px) {
-    #circle-2 {max-width: 100%; max-height: 100%;align-items: center;}
-}
-@media only screen and (min-width: 480px) {
-    #circle-2 {max-width: 100%; max-height: 100%;align-items: center;} 
-}
-@media only screen and (min-width: 320px) {
-    #circle-2 {max-width: 100%; max-height: 100%;align-items: center;} 
 }
 .list{
     color: #ed7014;
