--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@
 }
 body {
     font-family: 'Noto Sans KR', sans-serif;  
-    font-weight: 400; 
+    font-weight: 300; 
     color: #36454F; 
     margin-left: auto;
     margin-right: auto;
@@ -179,6 +179,9 @@ hr {
     height: 100%;
     border-radius: 50%;
     
+}
+.pad{
+    padding: 1rem;
 }
 .list{
     color: #ed7014;
