--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,16 @@ body {
     padding: 1rem;
 }
 /*adds less weight to the font for a smaller screen*/
+@media screen and (max-width: 1000px){
+    body{
+        font-weight: 300; 
+    }
+}
+@media screen and (max-width: 800px){
+    body{
+        font-weight: 300; 
+    }
+}
 @media screen and (max-width: 575px){
     body{
         font-weight: 300; 
@@ -53,6 +63,15 @@ h4{
     font-size: 150%;
     letter-spacing: 4px;
     float: right;
+}
+@media screen and (max-width: 800px){
+    #nav{
+        display: flex;
+        font-size: smaller;
+        flex-direction: column;
+        align-items: flex-start;
+        float: left;
+    }
 }
 @media screen and (max-width: 575px){
     #nav{
@@ -166,12 +185,63 @@ hr {
 }
 .flex-container {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     padding: 1rem;
 }
 @media screen and (max-width: 575px){
     .flex-container{
         flex-direction: column;
+    }
+}
+/*styles divs on instructors page*/
+.wide{
+    display: flex;
+    justify-content: flex-start;
+    width: 30%;
+}
+@media screen and (max-width: 1200px){
+    .wide{
+        flex-direction: column;
+        width: auto;
+    }
+}
+@media screen and (max-width: 1000px){
+    .wide{
+        flex-direction: column;
+        width: auto;
+    }
+}
+@media screen and (max-width: 800px){
+    .wide{
+        flex-direction: column;
+        width: auto;
+    }
+}
+@media screen and (max-width: 575px){
+    .wide{
+        flex-direction: column;
+        width: auto;
+    }
+}
+/*makes img responsive*/
+@media screen and (max-width: 1200px){
+    img{
+        width: 100%;
+    }
+}
+@media screen and (max-width: 1000px){
+    img{
+        width: 100%;
+    }
+}
+@media screen and (max-width: 800px){
+    img{
+        width: 100%;
+    }
+}
+@media screen and (max-width: 575px){
+    img{
+        width: 100%;
     }
 }
 /* what is yoga */ 
@@ -285,6 +355,24 @@ input[type=text],input[type=email], select, textarea {
     align-items: center;
     padding: 1rem;
     height: 10rem;  
+}
+@media screen and (max-width: 1200px){
+    .footer{
+        flex-direction: column;
+        padding-top: 10px;
+    }
+}
+@media screen and (max-width: 1000px){
+    .footer{
+        flex-direction: column;
+        padding-top: 10px;
+    }
+}
+@media screen and (max-width: 800px){
+    .footer{
+        flex-direction: column;
+        padding-top: 10px;
+    }
 }
 @media screen and (max-width: 575px){
     .footer{
