--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,26 +60,42 @@ h4{
 }
 /* nav links & logo style*/
 #nav {
+    display: flex;
+    justify-content: flex-end;
     font-size: 150%;
     letter-spacing: 4px;
-    float: right;
+   
+}
+@media screen and (max-width: 1200px){
+    #nav{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        font-size: smaller;             
+    }
+}
+@media screen and (max-width: 1000px){
+    #nav{
+        display: flex;
+        justify-content: center;
+        font-size: smaller;
+        flex-direction: column;     
+    }
 }
 @media screen and (max-width: 800px){
     #nav{
         display: flex;
+        justify-content: center;
         font-size: smaller;
-        flex-direction: column;
-        align-items: flex-start;
-        float: left;
+        flex-direction: column;      
     }
 }
 @media screen and (max-width: 575px){
     #nav{
         display: flex;
+        justify-content: center;
         font-size: smaller;
-        flex-direction: column;
-        align-items: flex-start;
-        float: left;
+        flex-direction: column;        
     }
 }
 #nav, #logo {
@@ -89,7 +105,6 @@ h4{
     text-decoration: none;
     color: inherit;
     padding: 1rem;
-
 }
 /*styles a line under the nav whe nyou hover*/
 #nav a:hover {
@@ -185,8 +200,9 @@ hr {
 }
 .flex-container {
     display: flex;
-    justify-content: space-between;
-    padding: 1rem;
+    align-items: flex-start;
+    justify-content: space-evenly;
+   
 }
 @media screen and (max-width: 575px){
     .flex-container{
@@ -198,50 +214,105 @@ hr {
     display: flex;
     justify-content: flex-start;
     width: 30%;
+    padding: 5rem;
 }
+
 @media screen and (max-width: 1200px){
     .wide{
         flex-direction: column;
-        width: auto;
+        width: 100%; 
     }
 }
 @media screen and (max-width: 1000px){
     .wide{
         flex-direction: column;
-        width: auto;
+        width: 100%;
     }
 }
 @media screen and (max-width: 800px){
     .wide{
         flex-direction: column;
-        width: auto;
+        width: 100%;
     }
 }
 @media screen and (max-width: 575px){
     .wide{
         flex-direction: column;
-        width: auto;
+        width: 100%;
+    }
+}
+/*container for instructor pictures
+.pic-container2{
+    width: 300px;
+    height: 300px;
+}
+#ciara{
+    background: url('../images/teach2.jpg') no-repeat center center;
+    height: 100%;
+}
+#sara{
+    background: url('../images/teach1.jpg') no-repeat center center;
+    height: 100%;
+}
+#keith{
+    background: url('../images/teach3.jpg') no-repeat center center;
+    height: 100%;
+}
+/*Change image size on different screens
+@media screen and (max-width: 1200px){
+    #ciara{ background-image: url ('../images/teach2small.jpg')
+
+    }
+}
+@media screen and (max-width: 1200px){
+    #keith{ background-image: url ('../images/teach3small.jpg')
+
+    }
+}
+@media screen and (max-width: 1200px){
+    #sara{ background-image: url ('../images/teach1small.jpg')
+
     }
 }
 /*makes img responsive*/
+img{
+    height: auto;
+    width: auto;
+    box-shadow: 10px 14px 20px 0px rgba(226,204,189,1);
+}
 @media screen and (max-width: 1200px){
     img{
+        display: flex;
+        flex-direction: column;
+        height: auto;
         width: 100%;
+
     }
 }
 @media screen and (max-width: 1000px){
     img{
-        width: 100%;
+        display: flex;
+        flex-direction: column;
+        height: auto;
+        width: 95%;
+
     }
 }
 @media screen and (max-width: 800px){
     img{
-        width: 100%;
+        display: flex;
+        flex-direction: column;
+        height: auto;
+        width: 90%;
+
     }
 }
 @media screen and (max-width: 575px){
     img{
-        width: 100%;
+        display: flex;
+        flex-direction: column;
+        height: auto;
+        width: 85%;
     }
 }
 /* what is yoga */ 
@@ -269,8 +340,8 @@ hr {
 }
 /*circled picture*/
 .pic-container{
-    width: 300px;
-    height: 300px;
+    width: 100%;
+    height: 100%;
     padding: 30px;
     border-style: solid;
     border-color: #ccc;
@@ -282,8 +353,7 @@ hr {
 #circle-2{
     background: url('../images/yoga-3.png') no-repeat center center;
     height: 100%;
-    border-radius: 50%;
-    
+    border-radius: 50%;  
 }
 .pad{
     padding: 1rem;
@@ -353,31 +423,29 @@ input[type=text],input[type=email], select, textarea {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    padding: 1rem;
     height: 10rem;  
+}
+.footer a {
+    padding: 0%;
 }
 @media screen and (max-width: 1200px){
     .footer{
-        flex-direction: column;
-        padding-top: 10px;
+        flex-direction: column;       
     }
 }
 @media screen and (max-width: 1000px){
     .footer{
-        flex-direction: column;
-        padding-top: 10px;
+        flex-direction: column;      
     }
 }
 @media screen and (max-width: 800px){
     .footer{
-        flex-direction: column;
-        padding-top: 10px;
+        flex-direction: column;       
     }
 }
 @media screen and (max-width: 575px){
     .footer{
         flex-direction: column;
-        padding-top: 10px;
     }
 }
 .footer a {
