--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,6 +43,10 @@ h1, h2 {
 h4{
     margin-bottom: 10px;;
 }
+header{
+    display: flex;
+    flex-wrap: wrap;
+}
 /* Transformaitive yoga styled*/
 #logo {
     font-family: 'Noto Sans KR', sans-serif;
@@ -56,51 +60,75 @@ h4{
     #logo{
         text-align: center; 
         font-size: medium;
+        flex-wrap: wrap;
     }
 }
-/* nav links & logo style*/
+
+/* nav links styled*/
 #nav {
     display: flex;
     justify-content: flex-end;
     font-size: 150%;
     letter-spacing: 4px;
+    flex-wrap: wrap;
+    align-items: center;
    
 }
 @media screen and (max-width: 1200px){
     #nav{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        font-size: smaller;             
+   
+        flex-direction: row;
+        font-size: smaller; 
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        align-items: center;            
     }
 }
 @media screen and (max-width: 1000px){
     #nav{
-        display: flex;
-        justify-content: center;
-        font-size: smaller;
-        flex-direction: column;     
+        
+        flex-direction: row;
+        font-size: small; 
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        align-items: center     
     }
 }
 @media screen and (max-width: 800px){
     #nav{
-        display: flex;
-        justify-content: center;
-        font-size: smaller;
-        flex-direction: column;      
+      
+        flex-direction: row;
+        font-size: smaller; 
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        align-items: center      
     }
 }
 @media screen and (max-width: 575px){
     #nav{
-        display: flex;
-        justify-content: center;
-        font-size: smaller;
-        flex-direction: column;        
+        
+        flex-direction: row;
+        font-size:x-small; 
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        align-items: center;       
     }
 }
+@media screen and (max-width: 320px){
+    #nav{
+        
+        flex-direction: row;
+        font-size:x-small; 
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        align-items: center;       
+    }
+}
+/* nav links & logo style*/
 #nav, #logo {
     line-height: 75px;
 }
+/* nav link a style*/
 #nav a {
     text-decoration: none;
     color: inherit;
@@ -201,10 +229,30 @@ hr {
 .flex-container {
     display: flex;
     align-items: flex-start;
-    justify-content: space-evenly;
+    justify-content:space-around;
    
 }
+@media screen and (max-width: 1200px){
+    .flex-container{
+        flex-direction: column;
+    }
+}
+@media screen and (max-width: 1000px){
+    .flex-container{
+        flex-direction: column;
+    }
+}
+@media screen and (max-width: 800px){
+    .flex-container{
+        flex-direction: column;
+    }
+}
 @media screen and (max-width: 575px){
+    .flex-container{
+        flex-direction: column;
+    }
+}
+@media screen and (max-width: 450px){
     .flex-container{
         flex-direction: column;
     }
@@ -236,6 +284,12 @@ hr {
     }
 }
 @media screen and (max-width: 575px){
+    .wide{
+        flex-direction: column;
+        width: 100%;
+    }
+}
+@media screen and (max-width: 450px){
     .wide{
         flex-direction: column;
         width: 100%;
@@ -337,12 +391,12 @@ img{
     background: url('../images/pose.png') no-repeat center center;
     height: 100%;
     border-radius: 50%;
+    width: 300px;
+    height: 300px;
 }
 /*circled picture*/
 .pic-container{
-    width: 100%;
-    height: 100%;
-    padding: 30px;
+    padding: 10px;
     border-style: solid;
     border-color: #ccc;
     border-width: 1px;
@@ -353,7 +407,9 @@ img{
 #circle-2{
     background: url('../images/yoga-3.png') no-repeat center center;
     height: 100%;
-    border-radius: 50%;  
+    border-radius: 50%; 
+    width: 300px;
+    height: 300px; 
 }
 .pad{
     padding: 1rem;
