--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,6 +46,7 @@ h4{
 header{
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
 }
 /* Transformaitive yoga styled*/
 #logo {
@@ -66,12 +67,13 @@ header{
 
 /* nav links styled*/
 #nav {
-    float: right;
+    display: flex;
+    justify-content: flex-end;
     font-size: 100%;
     letter-spacing: 4px;
    
    
-}/*
+}
 @media screen and (max-width: 1200px){
     #nav{
    
