--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -450,11 +450,19 @@ img{
     text-align: right;
     padding: 5rem;
 }
+.box-one a{
+    text-decoration: none;
+    color: inherit;
+}
 /* why do yoga*/
 .box-two{     
     line-height: 20px;
     text-align: left; 
     padding: 5rem; 
+}
+.box-two a{
+    text-decoration: none;
+    color: inherit;
 }
 @media screen and (max-width: 1200px){
     .box-two{
@@ -534,6 +542,10 @@ img{
     width: 300px;
     height: 300px; 
 }
+.signup{
+font-size: 150%;
+padding-top: 25px;
+}
 .pad{
     padding: 1rem;
 }
@@ -555,7 +567,8 @@ text-align: left;
     font-size: x-large;
 }
 .courses{
-    padding: 2rem;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 #contact-heading{
     padding-top: 4rem;
