--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -368,9 +368,9 @@ hr {
 /*styles divs on instructors page*/
 .wide{
     display: flex;
-    justify-content: flex-start;
-    width: 30%;
-    padding: 5rem;
+    flex-direction: column;
+    justify-content: space-evenly;
+    padding: 10px;
 }
 
 @media screen and (max-width: 1200px){
